--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "stylus": "0.42.3",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "moment": "^2.7.0",
   }
 }
