--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "application-name",
+  "name": "acgfun",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "express": "~3.4.8",
@@ -16,5 +16,7 @@
     "stylus": "0.42.3",
     "passport-local": "^1.0.0",
     "moment": "^2.7.0",
+    "colors": "^0.6.2",
+    "winston": "^0.7.3"
   }
 }
