--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "passport-local": "^1.0.0",
     "moment": "^2.7.0",
     "colors": "^0.6.2",
-    "winston": "^0.7.3"
+    "winston": "^0.7.3",
+    "mongoose-id-autoinc": "^2013.7.14-4",
+    "express-session": "^1.7.2",
+    "mongoose": "^3.8.8",
+    "passport": "^0.2.0",
+    "async": "^0.9.0"
   }
 }
