--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.7.2",
     "mongoose": "^3.8.8",
     "passport": "^0.2.0",
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "MD5": "^1.2.1"
   }
 }
