--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^3.8.8",
     "passport": "^0.2.0",
     "async": "^0.9.0",
-    "MD5": "^1.2.1"
+    "MD5": "^1.2.1",
+    "nodemailer": "^1.1.1"
   }
 }
