--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.2.0",
     "async": "^0.9.0",
     "MD5": "^1.2.1",
-    "nodemailer": "^1.1.1"
+    "nodemailer": "^1.1.1",
+    "multer": "^0.1.3"
   }
 }
