--- a/package.json
+++ b/package.json
@@ -25,6 +25,15 @@
     "async": "^0.9.0",
     "MD5": "^1.2.1",
     "nodemailer": "^1.1.1",
-    "multer": "^0.1.3"
+    "multer": "^0.1.3",
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.3.4",
+    "gulp-uglify": "^0.3.1",
+    "gulp-imagemin": "^1.0.0",
+    "gulp-sourcemaps": "^1.1.1",
+    "del": "^0.1.2"
+  },
+  "devDependencies": {
+    "gulp-minify-css": "^0.3.7"
   }
 }
