--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "gulp-sourcemaps": "^1.1.1",
     "del": "^0.1.2",
     "hat": "0.0.3",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "socket.io": "^1.0.6",
+    "ws": "^0.4.32"
   },
   "devDependencies": {
     "gulp-minify-css": "^0.3.7"
