--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "hat": "0.0.3",
     "gulp-rename": "^1.2.0",
     "socket.io": "^1.0.6",
-    "ws": "^0.4.32"
+    "ws": "^0.4.32",
+    "cookie": "^0.1.2"
   },
   "devDependencies": {
     "gulp-minify-css": "^0.3.7"
