--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "gulp-rename": "^1.2.0",
     "socket.io": "^1.0.6",
     "ws": "^0.4.32",
-    "cookie": "^0.1.2"
+    "cookie": "^0.1.2",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "gulp-minify-css": "^0.3.7"
